[package]
name = "slog-mozlog-json"
version = "0.1.0"
authors = ["Philip Jenvey <pjenvey@underboss.org>"]
description = "MozLog JSON drain for slog-rs"
repository = "https://github.com/mozilla-services/slog-mozlog-json/"
homepage = "https://github.com/mozilla-services/slog-mozlog-json/"
license = "MPL-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "mozilla-services/slog-mozlog-json" }

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
slog = { version = "2.2", features = ["nested-values"] }
